# nfamatch-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  _float.data  class_opt.dfa
dfa-optimizer/: .gitignore  Cargo.toml  caleb.dfa  cblock.dfa  class.dfa  dead_loop.dfa  dead_loop_opt.dfa  multiline_comment_opt.dfa
dfa-optimizer/src/: lib.rs  row.rs  table.rs
nfamatch/: 3_id.nfa  Cargo.toml  float.nfa  out.dfa
nfamatch/src/: lib.rs  nfa.rs  row.rs  table.rs
src/: lib.rs  row.rs  table.rs
