[package]
name = "dfa-optimizer"
version = "0.1.0"
authors = ["fdarlingco"]
edition = "2018"

[lib]
name = "dfa_optimizer"
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
log = "*"
env_logger = "*"