[package]
name = "nfamatch"
version = "0.1.0"
authors = ["Fisher Darling <fdarling@mines.edu>"]
edition = "2018"

[lib]
name = "nfamatch"
path = "./src/lib.rs"

[[bin]]
name = "NFAMATCH"
path = "bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfa-optimizer = { path = "../dfa-optimizer" }
structopt = "*"
log = "*"
env_logger = "*"